fix ticker jumping

--- a/wp-content/themes/verde-beta/css/main.css
+++ b/wp-content/themes/verde-beta/css/main.css
@@ -216,6 +216,7 @@ nav span {
 }
 
 .ticker {
+	left: calc(50% - 480px);
 	width: 930px;
 	height: 22px;
 	float: left;
